--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.unb.cic</groupId>
-  <artifactId>RTGoreToPrismMvn</artifactId>
+  <artifactId>RGMToPrism</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>RTGoreToPrismMvn</name>
+  <name>RGMToPrism</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -31,49 +31,39 @@
      		<directory>src/main/resources</directory>
     		</resource>
    		</resources>
-		<pluginManagement>
-		<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-			<plugin>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr4-maven-plugin</artifactId>
-				<version>4.3</version>
-				<executions>
-					<execution>
-            			<goals>
-                			<goal>antlr4</goal>
-            			</goals>
-        			</execution>
-                </executions>				
-			</plugin>
-			<plugin>
-    			<groupId>org.codehaus.mojo</groupId>
-    			<artifactId>build-helper-maven-plugin</artifactId>
-    			<executions>
-        			<execution>
-            			<id>add-source</id>
-            			<phase>generate-sources</phase>
-            			<goals>
-                			<goal>add-source</goal>
-            			</goals>
-            			<configuration>
-                			<sources>
-                    			<source>${project.build.directory}/generated-sources/antlr4/</source>
-                			</sources>
-                			<visitor>true</visitor>
-            			</configuration>
-        			</execution>
-    			</executions>
- 			</plugin>
-		</plugins>	
-		</pluginManagement>
-		
+			<plugins>
+				<plugin>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr4-maven-plugin</artifactId>
+					<version>4.3</version>
+					<executions>
+						<execution>
+            				<goals>
+	                			<goal>antlr4</goal>
+    	        			</goals>
+        				</execution>
+                	</executions>				
+				</plugin>
+				<plugin>
+	    			<groupId>org.codehaus.mojo</groupId>
+    				<artifactId>build-helper-maven-plugin</artifactId>
+    				<version>1.9.1</version>
+    				<executions>
+	        			<execution>
+            				<id>add-source</id>
+            				<phase>generate-sources</phase>
+            				<goals>
+	                			<goal>add-source</goal>
+            				</goals>
+            				<configuration>
+                				<sources>
+            	        			<source>${project.build.directory}/generated-sources/antlr4/</source>
+        	        			</sources>
+    	            			<visitor>true</visitor>
+	            			</configuration>
+	        			</execution>
+    				</executions>
+ 				</plugin>
+			</plugins>	
   </build>
 </project>
